fix(responsiveimage): was stretching beyond aspect-ratios

--- a/src/styles/EducatorGuide.module.scss
+++ b/src/styles/EducatorGuide.module.scss
@@ -29,6 +29,10 @@
     }
 }
 
+.floatingParagraph {
+    max-width: 100%;
+}
+
 .tooltipExampleImage {
     width: 50%;
     min-width: 200px;
