--- a/src/styles/HandsOnHistory.module.scss
+++ b/src/styles/HandsOnHistory.module.scss
@@ -1,12 +1,12 @@
 .container {
     background-color: $color_light_green;
     div img {
-        scale: 1.8;
-        aspect-ratio: 519/424;
+        scale: 1.3;
+        max-width: 100%;
         transform: rotateZ(15deg);
-        height: unset;
         @media screen and (max-width: $tablet_breakpoint) {
             transform: rotateZ(0deg);
+            scale: 1;
         }
     }
 }
